--- a/index.html
+++ b/index.html
@@ -113,12 +113,8 @@
     <h2 class="display-5">Portfolio</h2>
   </div>
 
-  <div class="col-12 col-md-6"></div> 
-  <div class="col-12 col-md-6"></div> 
-  <div class="col-12 col-md-6"></div> 
-  <div class="col-12 col-md-6"></div> 
-
- <div class="card mb-3">
+  <!--Cols for cards-->
+ <div class="col-12 col-md-6 mb-3">
   <img src="assets/images/wags-and-walks.webp" class="card-img-top" alt="A man walking several dogs early in the morning">
   <div class="card-body">
     <h3 class="card-title">Wags & Walks</h3>
@@ -128,7 +124,7 @@
   </div>
  </div>
 
- <div class="card mb-3">
+ <div class="col-12 col-md-6 mb-3">
   <img src="assets/images/we-wellness.webp" class="card-img-top" alt="A spa with candles towels and natural material">
   <div class="card-body">
     <h3 class="card-title">We Wellness</h3>
@@ -138,7 +134,7 @@
   </div>
  </div>
 
- <div class="card mb-3">
+ <div class="col-12 col-md-6 mb-3">
   <img src="assets/images/math-wiz.webp" class="card-img-top" alt="A child practicing math at a computer">
   <div class="card-body">
     <h3 class="card-title">Math Wiz</h3>
@@ -148,7 +144,7 @@
   </div>
  </div>
 
- <div class="card mb-3">
+ <div class="col-12 col-md-6 mb-3">
   <img src="assets/images/bmi-calculator.webp" class="card-img-top" alt="Weighing scales seen from the first person view of the person standing on the scales">
   <div class="card-body">
     <h3 class="card-title">BMI Calculator</h3>
