--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <p class="lead mb-5">Let's create something amazing together!</p>
 
         <!-- Button trigger modal -->
-        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+        <button type="button" class="btn btn-primary sharp-corners" data-bs-toggle="modal" data-bs-target="#exampleModal">
           Subscribe to my newsletter!
         </button>
 
@@ -128,7 +128,7 @@
         </div>
 
         <!--Cols for cards-->
-        <div class="col-12 col-md-6 mb-3">
+        <div class="col-12 col-md-6 mb-3 sharp-corners">
           <img src="assets/images/wags-and-walks.webp" class="card-img-top"
             alt="A man walking several dogs early in the morning">
           <div class="card-body">
@@ -141,7 +141,7 @@
           </div>
         </div>
 
-        <div class="col-12 col-md-6 mb-3">
+        <div class="col-12 col-md-6 mb-3 sharp-corners">
           <img src="assets/images/we-wellness.webp" class="card-img-top"
             alt="A spa with candles towels and natural material">
           <div class="card-body">
@@ -155,7 +155,7 @@
           </div>
         </div>
 
-        <div class="col-12 col-md-6 mb-3">
+        <div class="col-12 col-md-6 mb-3 sharp-corners">
           <img src="assets/images/math-wiz.webp" class="card-img-top" alt="A child practicing math at a computer">
           <div class="card-body">
             <h3 class="card-title">Math Wiz</h3>
@@ -166,7 +166,7 @@
           </div>
         </div>
 
-        <div class="col-12 col-md-6 mb-3">
+        <div class="col-12 col-md-6 mb-3 sharp-corners">
           <img src="assets/images/bmi-calculator.webp" class="card-img-top"
             alt="Weighing scales seen from the first person view of the person standing on the scales">
           <div class="card-body">
@@ -195,7 +195,7 @@
       <div class="col-12 col-md-10 col-lg-8 mb-4">
         <!--Add your form here-->
 
-        <form class="row g-3">
+        <form class="row g-3 sharp-corners">
 
           <div class="col-12 col-lg-4">
             <label for="fullName" class="form-label">Full Name</label>
@@ -231,7 +231,7 @@
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" 
    aria-hidden="true">
   <div class="modal-dialog modal-lg">
-      <div class="modal-content">
+      <div class="modal-content sharp-corners">
           <div class="modal-header">
               <h1 class="modal-title fs-5" id="exampleModalLabel">Subscribe</h1>
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
